# PyCalculator

./: MyListener.py  README.md  pyproject.toml  run.py  run_script.sh
antlr_files/: Calculator.interp  Calculator.tokens  CalculatorLexer.interp  CalculatorLexer.py  CalculatorListener.py  CalculatorParser.py
grammar/: Calculator.g4
input_files/: input.txt
stack/: stack.py
